Encode pipeline-as-specification into CLAUDE.md
The pipeline is the constraint system. Every future agent session must
reason from the trigger backward, not from features forward.

New section: THE PIPELINE IS THE SPECIFICATION

Encodes:
- The Armstrong Invariant: one-command release via make tag + push tag.
  mvn deploy as a manual step is forbidden. That path is closed.
- The Gate: mvnd verify must pass in CI, not just locally. CI environment
  facts are load-bearing: Java 25 + --enable-preview, GPG loopback,
  credentials from GitHub secrets (never ~/.m2/settings.xml).
- The GPG Loopback Scar: --pinentry-mode loopback is not a workaround,
  it is load-bearing context from real CI failure. Do not remove it.
- The Output Contract: target/docs/, target/blog/, target/pdf/ — DTR
  tests that produce output elsewhere are wrong by definition.
- Failure semantics: verify fails → nothing publishes.
- Dates as triggers: March 23 is when make release VERSION=1.0 fires,
  not a deadline. The right question: "What needs to be true for
  make release to succeed in a GitHub Actions runner?"

An agent that doesn't know this suggests manual steps at release time.
Manual steps at release time break the invariant. The checklist grows.
The one-command release becomes a ceremony.

https://claude.ai/code/session_01E8MJ5hKhWwa4ZctN2GL81h